--- a/skyfolk/static/css/groups.css
+++ b/skyfolk/static/css/groups.css
@@ -1,42 +1,111 @@
 html, body {
   background-color: #f9f9f9; }
 
-.wrapper-news {
+.wrapper-groups {
   margin-top: 3%;
   border-radius: 3px;
   height: auto; }
-  .wrapper-news .notice-item {
+  .wrapper-groups .notice-item {
     background-color: #fff;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
     padding: 10px;
     margin: 0.95%;
     overflow: hidden;
     border-radius: 3px; }
-    .wrapper-news .notice-item .img {
+    .wrapper-groups .notice-item .img {
       border-radius: 3px;
       box-shadow: 0 1px 5px #1e88e5; }
-      .wrapper-news .notice-item .img img {
+      .wrapper-groups .notice-item .img img {
         width: 100%;
         height: 100%; }
-    .wrapper-news .notice-item .contenido {
+    .wrapper-groups .notice-item .contenido {
       padding-left: 10px;
       display: block; }
-      .wrapper-news .notice-item .contenido > p > img {
+      .wrapper-groups .notice-item .contenido > p > img {
         width: 20px;
         height: 20px; }
-    .wrapper-news .notice-item .author {
+    .wrapper-groups .notice-item .author {
       display: block;
       padding-left: 10px;
       margin-bottom: 2%; }
-      .wrapper-news .notice-item .author a {
+      .wrapper-groups .notice-item .author a {
         text-decoration: none;
         color: #1e88e5;
         font-weight: 600;
         margin-right: 2%; }
-      .wrapper-news .notice-item .author i {
+      .wrapper-groups .notice-item .author i {
         color: #555; }
-      .wrapper-news .notice-item .author .pub-date {
+      .wrapper-groups .notice-item .author .pub-date {
         margin-top: 2%;
         display: block; }
+  .wrapper-groups .personal-card {
+    height: 300px;
+    margin-top: 5%;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4); }
+    .wrapper-groups .personal-card .header {
+      height: 150px; }
+      .wrapper-groups .personal-card .header .back-profile-user {
+        width: 100%;
+        height: 100%;
+        position: relative; }
+      .wrapper-groups .personal-card .header .bg-user {
+        width: 80px;
+        height: 80px;
+        position: relative;
+        margin: auto;
+        display: block; }
+      .wrapper-groups .personal-card .header .profile-user-bg {
+        position: relative;
+        margin-top: -80px;
+        width: 80px;
+        height: 80px;
+        border-radius: 3px;
+        box-shadow: 0 1px 5px #1e88e5;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease-in;
+        transition: all 0.3s ease-in; }
+        .wrapper-groups .personal-card .header .profile-user-bg > img {
+          width: 100%;
+          height: 100%;
+          display: block; }
+        .wrapper-groups .personal-card .header .profile-user-bg:hover {
+          transform: scale(1.1);
+          border-color: #1e88e5;
+          opacity: 1; }
+      .wrapper-groups .personal-card .header .group-icon {
+        position: relative;
+        margin-top: -30px;
+        float: right;
+        margin-right: 20px;
+        background-color: #1e88e5;
+        color: #fff;
+        border-radius: 100%;
+        width: 50px;
+        height: 50px;
+        padding-top: 12px;
+        box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+        text-align: center;
+        display: inline-block; }
+    .wrapper-groups .personal-card .name-friend {
+      position: relative;
+      width: 60%;
+      height: auto;
+      margin: auto;
+      text-align: center;
+      border-radius: 7px;
+      padding: 10px;
+      color: #555;
+      word-wrap: break-word;
+      background-color: #e0e0e0;
+      clear: both; }
+      .wrapper-groups .personal-card .name-friend > a:first-child {
+        color: #1e88e5;
+        text-decoration: none; }
+      .wrapper-groups .personal-card .name-friend > p:last-child {
+        color: #555; }
+    .wrapper-groups .personal-card .users-in-group {
+      margin-top: 1.5%;
+      font-weight: bold;
+      color: #1e88e5; }
 
 /*# sourceMappingURL=groups.css.map */
