--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -68,9 +68,9 @@ $tomatocolor: #ff6347
   color: $whitecolor
   border-radius: 100%
   width: 50px
-  margin-left: 300px
   height: 50px
-  padding-left: 14px
+  text-align: center
+  box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15)
   padding-top: 14px
   display: inline-block
 
