--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -3,7 +3,7 @@
 {% load el_pagination_tags %}
 {% paginate friends_top4 %}
 {% for item in friends_top4 %}
-            <div class="col l3 m10 s12">
+            <div class="col l3 m10 s12 offset-m1">
                 <div class="personal-card">
                 <div class="row">
                     <div class="col s12">
