--- a/skyfolk/templates/groups/list_group.html
+++ b/skyfolk/templates/groups/list_group.html
@@ -24,9 +24,9 @@
                                             {% else %}
                                                 <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                                             {% endif %}
-                                            <i class="material-icons md-24 group-icon">group</i>
+                                            <i class="material-icons md-24 group-icon" title="{{ group.users|length }}">group</i>
                                             <div class="bg-user">
-                                                <div onclick="location.href='/group/{{ item.user__username }}'"
+                                                <div onclick="location.href='/group/{{ group.user__username }}'"
                                                      class="profile-user-bg">
                                                     {% if group.small_image and group.small_image|file_exists %}
                                                         <img src="{{ MEDIA_URL }}{{ group.small_image }}"
@@ -44,22 +44,19 @@
                                     <div class="row">
                                         <div class="col s12">
                                             <div class="name-friend">
-                                                <a href="/group/{{ group.name }}">{{ group.name }}</a><br><br>
-                                                <p>{{ group.description }}</p>
+                                                <a class="truncate" href="/group/{{ group.slug }}">{{ group.name }}</a><br><br>
+                                                <p class="truncate">{{ group.description }}</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="divider"></div>
                                     <div class="row">
-                                        <div class="col s12">
-                                            <span>
-                                                {% for tag in group.tags.all %}
-                                                    <div class="chip">{{ tag.name }}</div>
+                                        <div class="col s12 group-data">
+                                                {% for tag in group.tags.most_common|slice:":5" %}
+                                                    <span class="chip">
+                                                        {{ tag.name|truncatechars:9 }}
+                                                    </span>
                                                 {% endfor %}
-                                            <p class="right users-in-group">
-                                                +500
-                                            </p>
-                                            </span>
                                         </div>
                                     </div>
                                 </div>
