--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/group_profile.css"
           onload="if(media!='all')media='all'">
 {% endblock %}
+{% block extra-js %}
+    <script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
+{% endblock %}
 {% block title %} <title> Grupo {{ group_profile.name }}</title> {% endblock %}
 {% block content %}
     <div class="container">
