--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -23,7 +23,9 @@
                             <img src="{{ STATIC_URL }}img/nuevo.png" height="120" width="120">
                         </div>
                         <span class="informacion">
-                            <span id="{% if follow_group %}unfollow-group{% else %}follow-group{% endif %}" data-id="{{ group_profile.id }}" class="fa fa-plus group-follow" title="Seguir"></span>
+                        {% with follow_group as is_follow %}
+                            <span id="{% if is_follow %}unfollow-group{% else %}follow-group{% endif %}" data-id="{{ group_profile.id }}" class="{% if is_follow %}fa fa-remove{% else %}fa fa-plus{% endif %} group-follow" title="Seguir"></span>
+                        {% endwith %}
                             <span class="fa fa-heart group-like" title="¡Me gusta!"></span>
                             <span class="fa fa-paper-plane group-comment" title="Escribir"></span>
                         </span>
