--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -16,7 +16,9 @@ Base para la interfaz en comun de todos los usuarios.
     <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
-
+    <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
