--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -7,7 +7,8 @@
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/setup.css" />
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/setup.css">
+
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.1.0.min.js"></script>
