--- a/skyfolk/templates/account/email_confirm.html
+++ b/skyfolk/templates/account/email_confirm.html
@@ -8,13 +8,11 @@
 
 {% block extra-css %}
     <style>
-        body {
-            background-color: #b0bec5;
-        }
         .container {
-            background-color: #ffffff;
+            background-color: #f0f0f0;
             padding: 20px;
             border-radius: 10px;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
         }
         button {
             margin-top: 2.5%;
@@ -22,46 +20,67 @@
         .information-text {
             font-size: 1.3em;
         }
+
         .email-info {
             padding: 10px;
         }
+
         .email-info > h1 {
             font-size: 2em;
+        }
+        .nav-wrapper > h5 {
+            color: #555;
+            margin-left: 2%;
         }
     </style>
 {% endblock %}
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
-{% block barra_navegacion %}{% comment %} No debe aparecer, ya que no estamos registrados aun {% endcomment %}{% endblock %}
+{% block barra_navegacion %}
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper white z-depth-1">
+                <h5 class="left grey-text hide-on-med-and-down">Confirmar correo electrónico</h5>
+                <a title="Inicio" href="/inicio" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
+            </div>
+        </nav>
+    </div>
+    <script src="{{ STATIC_URL }}js/materialize.min.js" type="text/javascript"></script>
+{% endblock %}
 
 {% block content %}
     <div class="container">
-    <div class="row">
-        <div class="col l12 s12 m12">
-        <div class="col l12 s12 m12 hgroup">
-            <h4 class="cn"> Email </h4>
-            <h6 class="ch"> {% trans "Confirm E-mail Address" %} </h6>
-        </div>
-        <div class="col l12 s12 m12 email-info">
-        {% if confirmation %}
+        <div class="row">
+            <div class="col l12 s12 m12">
+                <div class="col l12 s12 m12 hgroup">
+                    <h4 class="cn"> Email </h4>
+                    <h6 class="ch"> {% trans "Confirm E-mail Address" %} </h6>
+                </div>
+                <div class="col l12 s12 m12 email-info">
+                    {% if confirmation %}
 
-        {% user_display confirmation.email_address.user as user_display %}
+                        {% user_display confirmation.email_address.user as user_display %}
 
-        <p class="information-text">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-         <div class="row">
-            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-            {% csrf_token %}
-                <button class="waves-effect waves-light btn right" type="submit">{% trans 'Confirm' %}</button>
-            </form>
-        </div>
-        {% else %}
+                        <p class="information-text">{% blocktrans with confirmation.email_address.email as email %}
+                            Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for
+                            user {{ user_display }}.{% endblocktrans %}</p>
+                        <div class="row">
+                            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                                {% csrf_token %}
+                                <button class="waves-effect waves-light btn right blue darken-1"
+                                        type="submit">{% trans 'Confirm' %}</button>
+                            </form>
+                        </div>
+                    {% else %}
 
-        {% url 'account_email' as email_url %}
+                        {% url 'account_email' as email_url %}
 
-        <p class="flow-text information-text">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url}}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-        {% endif %}
-        </div>
+                        <p class="flow-text information-text">{% blocktrans %}This e-mail confirmation link expired or
+                            is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>
+                            .{% endblocktrans %}</p>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
