--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -73,6 +73,7 @@
                     <span class="hate-comment">
                         <i class="fa fa-heart fa-stack-1x"></i>
                         <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
+                        <i class="fa hate-value"></i>
                     </span>
                 </li>
                 {% endif %}
