--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -4,47 +4,58 @@
 {% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}
 
 {% block extra-css %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/avatar.css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/avatar.css"/>
 {% endblock %}
 
 {% block cf-title %}
-<div class="hgroup">
-	<h4 class="cn"> Imágen de perfil </h4>
-	<h6 class="ch"> Añade una foto de perfil </h6>
-</div>
+    <div class="hgroup">
+        <h4 class="cn"> Imágen de perfil </h4>
+        <h6 class="ch"> Añade una foto de perfil </h6>
+    </div>
 {% endblock %}
 
 {% block cf-form %}
-<div id="change-avatar" class="col l12 m12 s12 current-avatar">
-    <p>{% trans "Your current avatar: " %}</p>
-	{% if avatars %}
-	<a href="{% url 'avatar_change' %}">
-    {% avatar user %}
-	</a>
-	{% else %}
-	{% avatar user %}
-	{% endif %}
-		<a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
-</div>
-    <div id="option-avatar" class="col l12 m12 s12 options-avatar">
-    {% if not avatars %}
-        <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
-    {% endif %}
-    <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
-        <div class="file-field input-field">
-            {{ upload_avatar_form.avatar.errors }}
-          <div class="btn blue darken-1 waves-effect waves-light">
-            <span>Imágen</span>
-            {{ upload_avatar_form.avatar }}
-          </div>
-          <div class="file-path-wrapper">
-            <input class="file-path validate" type="text">
-          </div>
-        </div>
-        {% csrf_token %}<input class="btn blue darken-1 waves-effect waves-light left" type="submit" value="{% trans "Upload New Image" %}" />
-    </form>
+    <div id="change-avatar" class="col l12 m12 s12 current-avatar">
+        <p>{% trans "Your current avatar: " %}</p>
+        {% if avatars %}
+            <a href="{% url 'avatar_change' %}">
+                {% avatar user %}
+            </a>
+        {% else %}
+            {% avatar user %}
+        {% endif %}
+        <a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i
+                class="fa fa-trash"></i></a>
     </div>
-	<script>
-  	$('.menu-config').find('li:nth-child(3)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
-	</script>
+    <div id="option-avatar" class="col l12 m12 s12 options-avatar">
+        {% if not avatars %}
+            <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
+        {% endif %}
+        <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
+            <div class="row">
+                <div class="file-field input-field">
+                    {{ upload_avatar_form.avatar.errors }}
+                    <div class="btn blue darken-1 waves-effect waves-light">
+                        <span>Imágen</span>
+                        {{ upload_avatar_form.avatar }}
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {{ upload_avatar_form.url_image.errors }}
+                <div class="input-field col s12">
+                    {{ upload_avatar_form.url_image }}
+                    <label for="id_url_image" class="avatar_from_url">{{ upload_avatar_form.url_image.label }}</label>
+                </div>
+            </div>
+            {% csrf_token %}<input class="btn blue darken-1 waves-effect waves-light left" type="submit"
+                                   value="{% trans "Upload New Image" %}"/>
+        </form>
+    </div>
+    <script>
+        $('.menu-config').find('li:nth-child(3)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+    </script>
 {% endblock %}
