--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -63,19 +63,19 @@
       display: inline-block;
       white-space: nowrap;
       -webkit-user-select: none; }
-  .wrapper-p .options-avatar label[for="id_avatar"] {
+  .wrapper-p .options-avatar .list-avatar label[for="id_avatar"] {
     display: none; }
-  .wrapper-p .options-avatar img, .wrapper-p .options-avatar label {
+  .wrapper-p .options-avatar .list-avatar img, .wrapper-p .options-avatar label {
     position: relative;
     display: inline-block; }
-  .wrapper-p .options-avatar img {
+  .wrapper-p .options-avatar .list-avatar img {
     margin-left: 30px; }
-  .wrapper-p .options-avatar label {
+  .wrapper-p .options-avatar .list-avatar label {
     margin-bottom: 20px; }
 
-.wrapper-p {
+.delete-avatars, .list-avatar {
   /* DELETE AVATAR */ }
-  .wrapper-p .active {
+  .delete-avatars .active, .list-avatar .active {
     border: 4px solid #1e88e5; }
 
 .delete-avatars input[type="checkbox"] {
