--- a/skyfolk/static/sass/avatar.sass
+++ b/skyfolk/static/sass/avatar.sass
@@ -68,16 +68,16 @@ $whitewithopacity: rgba(255, 255, 255, .8)
         display: inline-block
         white-space: nowrap
         -webkit-user-select: none
-    & label[for="id_avatar"]
+    .list-avatar label[for="id_avatar"]
       display: none
-    & img, label
+    .list-avatar img, label
       position: relative
       display: inline-block
-    & img
+    .list-avatar img
       margin-left: 30px
-    & label
+    .list-avatar label
       margin-bottom: 20px
-.wrapper-p
+.delete-avatars, .list-avatar
   .active
     border: 4px solid $blueskyfolk
 
