--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -47,7 +47,7 @@
             <ul id="user-stats" class="stats">
                 <li>
                     <a href="/followers/{{ group_profile.name }}"><strong
-                            id="followers-stats">50</strong><span>Usuarios</span></a>
+                            id="followers-stats">{{ users_in_group }}</strong><span>Usuarios</span></a>
                 </li>
                 <li>
                     <a id="likes" href=""><strong>{{ likes }}</strong><span title="me gusta">Me gusta</span></a>
