--- a/skyfolk/static/sass/avatar.sass
+++ b/skyfolk/static/sass/avatar.sass
@@ -68,15 +68,19 @@ $whitewithopacity: rgba(255, 255, 255, .8)
         display: inline-block
         white-space: nowrap
         -webkit-user-select: none
-    .list-avatar label[for="id_avatar"]
-      display: none
-    .list-avatar img, label
-      position: relative
-      display: inline-block
-    .list-avatar img
-      margin-left: 30px
-    .list-avatar label
-      margin-bottom: 20px
+    .list-avatar 
+      label[for="id_avatar"]
+        display: none
+    .list-avatar 
+      img, label
+        position: relative
+        display: inline-block
+    .list-avatar 
+      img
+        margin-left: 30px
+    .list-avatar 
+      label
+        margin-bottom: 20px
 .delete-avatars, .list-avatar
   .active
     border: 4px solid $blueskyfolk
