--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -55,7 +55,7 @@
   </div>
   <li id="loader"></li>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.textcomplete.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/materialize.min.js" type="text/javascript"></script>
