--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -18,7 +18,7 @@ Base para la interfaz en comun de todos los usuarios.
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
     <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
+    <!--<script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>-->
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
@@ -279,6 +279,10 @@ Base para la interfaz en comun de todos los usuarios.
                             <button type="submit" id="btn_new_group"
                                     class="waves-effect waves-light btn right blue">
                                 Crear grupo<i class="material-icons right">people</i></button>
+                            <button type="submit" id="btn_close_group"
+                                    class="waves-effect waves-light btn right transparent black-text">
+                                Cerrar<i class="material-icons right">close</i>
+                            </button>
                         </div>
                     </div>
                 </form>
