--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -5,164 +5,212 @@
 {% block title %} <title>Skyfolk - Media</title> {% endblock %}
 
 {% block include_files %}
-    <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css" onload="if(media!='all')media='all'">
+    <!-- Estilos para la galeria de fotos -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/cropper.min.css" onload="if(media!='all')media='all'">
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" id="crop-avatar">
         <div class="row">
             <div class="col l12 m12 s12 container-gallery">
-              <a id="btn-upload-photo" class="btn-floating btn-large waves-effect waves-light blue darken-1"><i class="material-icons">add</i></a>
-              {% if object_list %}
-              <div class="row">
-                  {% include 'photologue/photo_gallery_page.html' %} 
-              </div>
-              {% endif %}
+                <a id="btn-upload-photo" class="btn-floating btn-large waves-effect waves-light blue darken-1"><i
+                        class="material-icons">add</i></a>
+                {% if object_list %}
+                    <div class="row">
+                        {% include 'photologue/photo_gallery_page.html' %}
+                    </div>
+                {% endif %}
             </div> <!-- end container-gallery -->
         </div>
-    <div class="upload_form" id="upload_photo">
-        <div class="col s12">
-          <ul class="tabs">
-            <li class="tab col s3"><a href="#foto" class="active">Foto</a></li>
-            <li class="tab col s3"><a href="#collection">Colección</a></li>
-          </ul>
-        </div>
-        <div id="foto">
-            <form action="{% url "photologue:upload-photo" %}" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
-                <div class="row">
-                    <div class="file-field input-field">
-                        {{ form.image.errors }}
-                      <div class="btn blue darken-1 waves-effect waves-light">
-                        <span>Imágen</span>
-                        {{ form.image }}
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
-                      </div>
+        <div class="upload_form" id="upload_photo" aria-labelledby="avatar-modal-label" role="dialog" tabindex="-1">
+            <div class="col s12">
+                <ul class="tabs">
+                    <li class="tab col s3"><a href="#foto" class="active">Foto</a></li>
+                    <li class="tab col s3"><a href="#collection">Colección</a></li>
+                </ul>
+            </div>
+            <div id="foto">
+                <form class="avatar-form" action="{% url "photologue:upload-photo" %}" method="post"
+                      accept-charset="utf-8"
+                      enctype="multipart/form-data">{% csrf_token %}
+                    <div class="row">
+                        <div class="file-field input-field avatar-upload">
+                            {{ form.image.errors }}
+                            <div class="btn blue darken-1 waves-effect waves-light">
+                                <span>Imágen</span>
+                                {{ form.image }}
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate avatar-input" name="image" type="text">
+                            </div>
+                            <input type="hidden" class="avatar-src" name="avatar_src">
+                            <input type="hidden" class="avatar-data" name="avatar_data">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.url_image.errors }}
-                    <div class="input-field col s12">
-                        {{ form.url_image }}
-                        <label for="id_url_image">URL Imagen</label>
+                    <div class="row">
+                        <a id="crop-image" class="waves-effect waves-light btn blue darken-1 right">Recortar
+                            <i class="material-icons right">crop</i>
+                        </a>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.crop_from.errors }}
-                    <div class="input-field col s12">
-                        {{ form.crop_from }}
-                        <label for="id_crop_from">{% trans "crop from" %}</label>
+                    <div class="row">
+                        {{ form.url_image.errors }}
+                        <div class="input-field col s12">
+                            {{ form.url_image }}
+                            <label for="id_url_image">URL Imagen</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.effect.errors }}
-                    <div class="input-field col s12">
-                        {{ form.effect }}
-                        <label for="id_effect">{% trans "photo effects" %}</label>
+                    <div class="row">
+                        {{ form.title.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">title</i>
+                            {{ form.title }}
+                            <label for="id_title">{% trans "title" %}</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.title.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">title</i>
-                        {{ form.title }}
-                        <label for="id_title">{% trans "title" %}</label>
+                    <div class="row">
+                        {{ form.caption.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">closed_caption</i>
+                            {{ form.caption }}
+                            <label for="id_caption">{% trans "caption" %}</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.caption.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">closed_caption</i>
-                        {{ form.caption }}
-                        <label for="id_caption">{% trans "caption" %}</label>
+                    <div class="row">
+                        {{ form.tags.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">label</i>
+                            {{ form.tags }}
+                            <label for="id_tags">{{ form.tags.help_text }}</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    {{ form.tags.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">label</i>
-                        {{ form.tags }}
-                        <label for="id_tags">{{ form.tags.help_text }}</label>
+                    <div class="row">
+                        <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
+                            <i class="material-icons right">file_upload</i>
+                        </button>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="waves-effect waves-light btn blue darken-1 right" type="submit" >Subir
-                    <i class="material-icons right">file_upload</i>
+                </form>
+            </div>
+            <div id="collection">
+                <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8"
+                      enctype="multipart/form-data">{% csrf_token %}
+                    <div class="row">
+                        <div class="file-field input-field">
+                            {{ form_zip.zip_file.errors }}
+                            <div class="btn blue darken-1 waves-effect waves-light">
+                                <span>{% trans "Upload a zip archive" %}</span>
+                                {{ form_zip.zip_file }}
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.title.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">title</i>
+                            {{ form_zip.title }}
+                            <label for="id_title">{% trans "title" %}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.caption.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">closed_caption</i>
+                            {{ form_zip.caption }}
+                            <label for="id_caption">{% trans "caption" %}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.description.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">description</i>
+                            {{ form_zip.description }}
+                            <label for="id_caption">{% trans "description" %}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.is_public.errors }}
+                        <p>
+                            {{ form_zip.is_public }}
+                            <label for="id_is_public">{% trans "Is public" %}</label>
+                            <i>{{ form_zip.is_public.help_text }}</i>
+                        </p>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.tags.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">label</i>
+                            {{ form_zip.tags }}
+                            <label for="id_tags">{{ form_zip.tags.help_text }}</label>
+                        </div>
+                    </div>
+                    <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
+                        <i class="material-icons right">file_upload</i>
                     </button>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-        <div id="collection">
-            <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
-                <div class="row">
-                    <div class="file-field input-field">
-                        {{ form_zip.zip_file.errors }}
-                      <div class="btn blue darken-1 waves-effect waves-light">
-                        <span>{% trans "Upload a zip archive" %}</span>
-                        {{ form_zip.zip_file }}
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
-                      </div>
+        <div id="crop-image-preview" class="crop-image-div">
+            <div class="row">
+                <div class="col s9">
+                    <div class="avatar-wrapper"></div>
+                </div>
+                <div class="col m3">
+                    <div class="avatar-preview preview-lg"></div>
+                    <div class="avatar-preview preview-md"></div>
+                    <div class="avatar-preview preview-sm"></div>
+                </div>
+            </div>
+            <div class="row avatar-btns">
+                <div class="col s12">
+                    <div class="btn-group">
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="-90"
+                                title="Rotate -90 degrees">Rotate Left
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="-15">-15deg
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="-30">-30deg
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="-45">-45deg
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="90"
+                                title="Rotate 90 degrees">Rotate Right
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="15">15deg
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="30">30deg
+                        </button>
+                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                                data-option="45">45deg
+                        </button>
                     </div>
                 </div>
-                <div class="row">
-                    {{ form_zip.title.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">title</i>
-                        {{ form_zip.title }}
-                        <label for="id_title">{% trans "title" %}</label>
-                    </div>
-                </div>
-                <div class="row">
-                    {{ form_zip.caption.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">closed_caption</i>
-                        {{ form_zip.caption }}
-                        <label for="id_caption">{% trans "caption" %}</label>
-                    </div>
-                </div>
-                <div class="row">
-                    {{ form_zip.description.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">description</i>
-                        {{ form_zip.description }}
-                        <label for="id_caption">{% trans "description" %}</label>
-                    </div>
-                </div>
-                <div class="row">
-                    {{ form_zip.is_public.errors }}
-                    <p>
-                        {{ form_zip.is_public }}
-                        <label for="id_is_public">{% trans "Is public" %}</label>
-                        <i>{{ form_zip.is_public.help_text }}</i>
-                    </p>
-                </div>
-                <div class="row">
-                    {{ form_zip.tags.errors }}
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">label</i>
-                        {{ form_zip.tags }}
-                        <label for="id_tags">{{ form_zip.tags.help_text }}</label>
-                    </div>
-                </div>
-                <button class="waves-effect waves-light btn blue darken-1 right" type="submit" >Subir
-                    <i class="material-icons right">file_upload</i>
-                </button>
-            </form>
+            </div>
         </div>
-    </div>
-</div> <!-- end wrapper -->
-{% block js-gallery %}
-    {{ block.super }}
-    <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
-    <script>
-        $.endlessPaginate({
-            paginateOnScroll: true,
-            paginateOnScrollMargin: 20
-        });
-    </script>
-{% endblock %}
+    <div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
+    </div> <!-- end wrapper -->
+    {% block js-gallery %}
+        {{ block.super }}
+        <script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/cropper.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
+        <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
+        <script>
+            $.endlessPaginate({
+                paginateOnScroll: true,
+                paginateOnScrollMargin: 20
+            });
+        </script>
+    {% endblock %}
 {% endblock %}
