--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -18,7 +18,7 @@ $eocolor: #e0e0e0
     top: 20%
     right: 0
     left: 0
-    z-index: 9999
+    z-index: 9998
     display: none
   .endless_more, .endless_loading
     clear: both
@@ -95,3 +95,17 @@ $eocolor: #e0e0e0
       & blockquote
         display: inline-block
         padding: 10px
+
+.crop-image-div
+  position: absolute
+  display: none
+  top: 20%
+  left: 0
+  right: 0
+  margin-left: auto
+  margin-right: auto
+  width: 50%
+  height: auto
+  background-color: #fff
+  box-shadow: $boxshadow
+  z-index: 9999
