+ V5 + Mejorando frontend de subida de imagenes

--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -109,3 +109,8 @@ $eocolor: #e0e0e0
   background-color: #fff
   box-shadow: $boxshadow
   z-index: 9999
+  .close-crop-image
+    margin-right: 1%
+    margin-top: 1%
+    cursor: pointer
+    color: grey
