--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -47,6 +47,7 @@
                             </div>
                             <input type="hidden" class="avatar-src" name="avatar_src">
                             <input type="hidden" class="avatar-data" name="avatar_data">
+                            <input type="hidden" class="is-cutted" name="avatar_cut" value="false">
                         </div>
                     </div>
                     <div class="row">
@@ -155,43 +156,44 @@
         </div>
         <div id="crop-image-preview" class="crop-image-div">
             <div class="row">
-                <div class="col s9">
+                <span class="close-crop-image fa fa-close right"></span>
+            </div>
+            <div class="row">
+                <div class="col s12">
                     <div class="avatar-wrapper"></div>
-                </div>
-                <div class="col m3">
-                    <div class="avatar-preview preview-lg"></div>
-                    <div class="avatar-preview preview-md"></div>
-                    <div class="avatar-preview preview-sm"></div>
                 </div>
             </div>
             <div class="row avatar-btns">
                 <div class="col s12">
                     <div class="btn-group">
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="-90"
                                 title="Rotate -90 degrees">Rotate Left
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="-15">-15deg
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="-30">-30deg
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="-45">-45deg
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="90"
                                 title="Rotate 90 degrees">Rotate Right
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="15">15deg
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="30">30deg
                         </button>
-                        <button type="button" class="waves-effect waves-light btn blue darken-1" data-method="rotate"
+                        <button type="button" class="waves-effect waves-light btn transparent black-text" data-method="rotate"
                                 data-option="45">45deg
+                        </button>
+                        <button id="cut-done" type="button" class="waves-effect waves-light btn blue darken-1 right">
+                            OK
                         </button>
                     </div>
                 </div>
@@ -202,7 +204,6 @@
     {% block js-gallery %}
         {{ block.super }}
         <script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/cropper.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
         <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
