--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -101,5 +101,10 @@
   background-color: #fff;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   z-index: 9999; }
+  .crop-image-div .close-crop-image {
+    margin-right: 1%;
+    margin-top: 1%;
+    cursor: pointer;
+    color: grey; }
 
 /*# sourceMappingURL=gallery.css.map */
