+ V5 + Lista de usuarios de un grupo

--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -46,7 +46,7 @@
             </header>
             <ul id="user-stats" class="stats">
                 <li>
-                    <a href="/followers/{{ group_profile.name }}"><strong
+                    <a href="/users/{{ group_profile.slug }}"><strong
                             id="followers-stats">{{ users_in_group }}</strong><span>Usuarios</span></a>
                 </li>
                 <li>
