--- a/skyfolk/templates/groups/followers.html
+++ b/skyfolk/templates/groups/followers.html
@@ -2,7 +2,7 @@
 {% comment %}
   Template para los seguidores de un perfil
 {% endcomment %}
-{% block title %} <title>{% if url_name == "followers" %}Seguidores {% else %} Seguidos {% endif %}{{ request.user.username }}</title> {% endblock %}
+{% block title %} <title>Usuarios de </title> {% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css" onload="if(media!='all')media='all'">
 {% endblock %}
@@ -11,12 +11,11 @@
     <div class="row">
         <div class="col l12 m10 s12 container-responsive">
             <div class="row">
-                {% include "account/relations_page.html" %}
+            {% include "groups/followers_page.html" %}
             </div>
         </div>
-    </div>
+        </div>
 </div>
-<script src="{{STATIC_URL}}js/friends.js"></script>
 {% block js %}
     {{ block.super }} 
     <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
@@ -26,10 +25,5 @@
                 paginateOnScrollMargin: 20
             });
         </script>
-        {% if url_name == "following" %}
-            <script>
-                $('#menu-hr').find('li:nth-child(3)').css('background-color', 'rgba(0,0,0,0.1)');
-            </script>
-        {% endif %}
 {% endblock %}
 {% endblock %}
