--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -68,4 +68,6 @@
             </div>
         </div>
     </div>
+    <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
+    <script async src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
 {% endblock %}
