+ V5 + Funcion para crear miniaturas de galeria + Lista de likes en grupos de usuario

--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -50,7 +50,7 @@
                             id="followers-stats">{{ users_in_group }}</strong><span>Usuarios</span></a>
                 </li>
                 <li>
-                    <a id="likes" href=""><strong>{{ likes }}</strong><span title="me gusta">Me gusta</span></a>
+                    <a id="likes" href="/glikes/{{ group_profile.slug }}"><strong>{{ likes }}</strong><span title="me gusta">Me gusta</span></a>
                 </li>
                 <li>
                     <a class="to_gallery"
