+ V5 + Subida de avatar (gif) arreglado + Notificaciones en toda la web + Opciones a respuestas de comentaris (solo frontend)

--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -3,6 +3,7 @@
 	Template para cambiar la privacidad
 {% endcomment %}
 {% block additional_files %}
+{% load i18n avatar_tags %}
 {% endblock %}
 {% block extra-css %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/privacidad.css">
