--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -1,23 +1,20 @@
 #section .wrapperx-hidden {
-    position: relative;
-    width: 100%;
-    float: left;
-    left: 0;
-    height: auto;
-    background: transparent;
-}
+  position: relative;
+  width: 100%;
+  float: left;
+  left: 0;
+  height: auto;
+  background: transparent; }
 
 #section .wrapperx {
-    position: relative;
-    width: 2%;
-    float: left;
-    left: 0;
-    height: auto;
-    background: transparent;
-    /* Second */
-}
-
-#section .wrapperx:before {
+  position: relative;
+  width: 2%;
+  float: left;
+  left: 0;
+  height: auto;
+  background: transparent;
+  /* Second */ }
+  #section .wrapperx:before {
     content: "";
     background-color: #1e88e5;
     width: 10px;
@@ -25,17 +22,13 @@
     position: absolute;
     top: 0;
     left: 40px;
-    opacity: 0.8;
-}
-
-#section .wrapperx .timeline-pub {
+    opacity: 0.8; }
+  #section .wrapperx .timeline-pub {
     margin-left: 30px;
     width: 10px;
     position: relative;
-    display: block;
-}
-
-#section .wrapperx .timeline-pub .second {
+    display: block; }
+  #section .wrapperx .timeline-pub .second {
     position: relative;
     min-width: 400px;
     max-width: 100%;
@@ -45,10 +38,8 @@
     right: -437px;
     margin-bottom: 70px;
     margin-top: 10px;
-    box-shadow: 0.1px 0.1px grey;
-}
-
-#section .wrapperx .timeline-pub .second .head {
+    box-shadow: 0.1px 0.1px grey; }
+  #section .wrapperx .timeline-pub .second .head {
     background-color: #1e88e5;
     width: 100%;
     height: 30px;
@@ -57,10 +48,8 @@
     padding: 0 5px;
     position: absolute;
     color: white;
-    font-weight: 100;
-}
-
-#section .wrapperx .timeline-pub .second .head em {
+    font-weight: 100; }
+  #section .wrapperx .timeline-pub .second .head em {
     float: left;
     width: 10px;
     height: 10px;
@@ -70,61 +59,49 @@
     position: absolute;
     transform: rotate(45deg);
     -moz-transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-#section .wrapperx .timeline-pub .head a {
+    -webkit-transform: rotate(45deg); }
+  #section .wrapperx .timeline-pub .head a {
     position: relative;
     top: 5px;
     font-style: normal;
     text-decoration: none;
-    color: white;
-}
-
-#section .wrapperx .timeline-pub .second #p {
+    color: white; }
+  #section .wrapperx .timeline-pub .second .timeline-content {
     position: relative;
     display: inline-block;
     top: 40px;
     text-align: center;
     font-family: "Open Sans", sans-serif;
-    font-size: 15px;
     font-weight: 100;
-    height: auto;
+    height: 2.6em;
+    overflow: hidden;
     width: 100%;
-    color: #000;
-}
-
-#section .wrapperx .timeline-pub #p img {
+    color: #000; }
+  #section .wrapperx .timeline-pub .timeline-content img {
     width: 20px;
     height: 20px;
-    z-index: 9999;
-}
-
-#section .wrapperx .timeline-pub .second .head .fecha_ {
+    z-index: 9999; }
+  #section .wrapperx .timeline-pub .show-more {
+    margin-top: 2%; }
+  #section .wrapperx .timeline-pub .second .head .fecha_ {
     font-size: 10px;
     float: right;
     position: relative;
-    display: inline-block;
-}
-
-#section .wrapperx .timeline-pub .second .contenidoadicional {
+    display: inline-block; }
+  #section .wrapperx .timeline-pub .second .contenidoadicional {
     width: 100%;
     height: auto;
     position: relative;
     top: 20px;
     margin-top: 30px;
-    border-top: 1px solid #ccc;
-}
-
-#section .wrapperx .timeline-pub .second .contenidoadicional img {
+    border-top: 1px solid #ccc; }
+  #section .wrapperx .timeline-pub .second .contenidoadicional img {
     width: 80%;
     border-radius: 7px;
     position: relative;
     left: 10%;
-    margin: 30px auto auto;
-}
-
-#section .wrapperx .timeline-pub .second .acontecimiento {
+    margin: 30px auto auto; }
+  #section .wrapperx .timeline-pub .second .acontecimiento {
     width: 45px;
     height: 45px;
     background-size: 100%;
@@ -133,80 +110,53 @@
     position: relative;
     display: inline-block;
     margin: 0 10px 0 -55px;
-    top: -7px;
-}
-
-#section .wrapperx .timeline-pub .second .acontecimiento img {
-    width: 100%;
-    height: 100%;
-}
-
-#section .wrapperx .timeline-pub .second .controles {
+    top: -7px; }
+    #section .wrapperx .timeline-pub .second .acontecimiento img {
+      width: 100%;
+      height: 100%; }
+  #section .wrapperx .timeline-pub .second .controles {
     position: relative;
     display: inline-block;
     width: 100%;
     height: 40px;
-    margin: 10px auto auto;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul {
+    margin: 10px auto auto; }
+  #section .wrapperx .timeline-pub .second .controles ul {
     margin: auto;
     position: relative;
     width: 100%;
     height: 30px;
-    text-align: center;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li {
-    margin: 10px;
-    color: #555;
-    display: inline-block;
-    cursor: pointer;
-    padding: 10px 7px;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(1):hover {
-    color: #BBDEFB;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(2):hover {
-    color: #1E88E5;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(3):hover {
-    color: #808080;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(4):hover {
-    color: #F06292;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(5):hover {
-    color: #3F51B5;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li:nth-child(6):hover {
-    color: tomato;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul .timeline-hate-with-values {
+    text-align: center; }
+    #section .wrapperx .timeline-pub .second .controles ul li {
+      margin: 10px;
+      color: #555;
+      display: inline-block;
+      cursor: pointer;
+      padding: 10px 7px; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(1):hover {
+        color: #BBDEFB; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(2):hover {
+        color: #1E88E5; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(3):hover {
+        color: #808080; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(4):hover {
+        color: #F06292; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(5):hover {
+        color: #3F51B5; }
+      #section .wrapperx .timeline-pub .second .controles ul li:nth-child(6):hover {
+        color: tomato; }
+  #section .wrapperx .timeline-pub .second .controles ul .timeline-hate-with-values {
     display: inline-block;
     margin-top: -1.25%;
-    position: relative;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul li .timeline-hate-value {
+    position: relative; }
+  #section .wrapperx .timeline-pub .second .controles ul li .timeline-hate-value {
     position: relative;
     float: right;
     left: 16px;
-    font-size: 1.1em;
-}
-
-#section .wrapperx .timeline-pub .second .controles ul .fa-heart i, #section .wrapperx .fa-tag i {
+    font-size: 1.1em; }
+  #section .wrapperx .timeline-pub .second .controles ul .fa-heart i, #section .wrapperx .fa-tag i {
     font-size: 0.855em;
     position: relative;
     float: right;
-    left: 6px;
-}
+    left: 6px; }
 
 /*# sourceMappingURL=timeline.css.map */
