--- a/skyfolk/static/sass/timeline.sass
+++ b/skyfolk/static/sass/timeline.sass
@@ -72,22 +72,25 @@ $blueskyfolk: #1e88e5
     text-decoration: none
     color: white
 
-  & .timeline-pub .second #p
+  & .timeline-pub .second .timeline-content
     position: relative
     display: inline-block
     top: 40px
     text-align: center
     font-family: 'Open Sans', sans-serif
-    font-size: 15px
     font-weight: 100
-    height: auto
+    height: 2.6em
+    overflow: hidden
     width: 100%
     color: #000
 
-  & .timeline-pub #p img
+  & .timeline-pub .timeline-content img
     width: 20px
     height: 20px
     z-index: 9999
+
+  & .timeline-pub .show-more
+    margin-top: 2%
 
   & .timeline-pub .second .head .fecha_
     font-size: 10px
